updated templates for ec2 configuration if available

--- a/credentials.yml
+++ b/credentials.yml
@@ -1,13 +1,13 @@
 ---
-aws_access_key_id:
-aws_secret_access_key:
-apigee_repo_user:
+aws_access_key_id: 'aws_access_key_id'
+aws_secret_access_key: 'aws_secret_access_key'
+apigee_repo_user: 
 apigee_repo_password:
 secure_security_group:
 secure_vpc_subnet_id:
 secure_name_prefix:
 secure_key_name:
-secure_aws_region:
+secure_aws_region: 'secure_aws_region'
 secure_owner_contact_info:
 secure_company_env:
 secure_department:
