updated README and updated EC2 configurations

--- a/credentials.yml
+++ b/credentials.yml
@@ -1,38 +1,38 @@
 ---
-aws_access_key_id: 'aws_access_key_id'
-aws_secret_access_key: 'aws_secret_access_key'
-apigee_repo_user: 
-apigee_repo_password:
-secure_security_group:
-secure_vpc_subnet_id:
-secure_name_prefix:
-secure_key_name:
-secure_aws_region: 'secure_aws_region'
-secure_owner_contact_info:
-secure_company_env:
-secure_department:
-secure_bag:
-secure_env_name:
+# aws_access_key_id: 
+# aws_secret_access_key: 
+# apigee_repo_user: 
+# apigee_repo_password:
+# secure_security_group:
+# secure_vpc_subnet_id:
+# secure_name_prefix:
+# secure_key_name:
+# secure_aws_region: 
+# secure_owner_contact_info:
+# secure_company_env:
+# secure_department:
+# secure_bag:
+# secure_env_name:
 
-opdk_user_name:
-opdk_user_email:
-opdk_user_pass:
-grafana_username:
-opdk_cass_password:
-opdk_smtp_user:
-opdk_smtp_password:
+# opdk_user_name:
+# opdk_user_email:
+# opdk_user_pass:
+# grafana_username:
+# opdk_cass_password:
+# opdk_smtp_user:
+# opdk_smtp_password:
 
-baas_admin_name:
-baas_admin_email:
-baas_admin_pass:
-baas_superuser_name:
-baas_superuser_email:
-baas_superuser_pass:
-baas_smtp_user:
-baas_smtp_user_pass:
+# baas_admin_name:
+# baas_admin_email:
+# baas_admin_pass:
+# baas_superuser_name:
+# baas_superuser_email:
+# baas_superuser_pass:
+# baas_smtp_user:
+# baas_smtp_user_pass:
 
-opdk_ldap_pass:
-secure_team_contact_info:
-pg_user:
-pg_pass:
+# opdk_ldap_pass:
+# secure_team_contact_info:
+# pg_user:
+# pg_pass:
 
