added missing required attribute

--- a/credentials.yml
+++ b/credentials.yml
@@ -18,6 +18,7 @@
 # opdk_user_email:
 # opdk_user_pass:
 # grafana_username:
+# opdk_cass_username
 # opdk_cass_password:
 # opdk_smtp_user:
 # opdk_smtp_password:
