--- a/resources/ec2.ini
+++ b/resources/ec2.ini
@@ -144,37 +144,37 @@ group_by_elasticache_replication_group = True
 # Ansible EC2 external inventory script settings
 #
 
-[ec2]
-
-# to talk to a private eucalyptus instance uncomment these lines
-# and edit edit eucalyptus_host to be the host name of your cloud controller
-#eucalyptus = True
-#eucalyptus_host = clc.cloud.domain.org
-
-# AWS regions to make calls to. Set this to 'all' to make request to all regio
-ns
-# in AWS and merge the results together. Alternatively, set this to a comma
-# separated list of regions. E.g. 'us-east-1,us-west-1,us-west-2'
-regions = all
-regions_exclude = us-gov-west-1,cn-north-1
-
-# When generating inventory, Ansible needs to know how to address a server.
-# Each EC2 instance has a lot of variables associated with it. Here is the lis
-t:
-#   http://docs.pythonboto.org/en/latest/ref/ec2.html#module-boto.ec2.instance
-# Below are 2 variables that are used as the address of a server:
-#   - destination_variable
-#   - vpc_destination_variable
-
-# This is the normal destination variable to use. If you are running Ansible
-# from outside EC2, then 'public_dns_name' makes the most sense. If you are
-# running Ansible from within EC2, then perhaps you want to use the internal
-# address, and should set this to 'private_dns_name'. The key of an EC2 tag
-...skipping...
-# pattern_include = staging-*
-
-# If you want to exclude any hosts that match a certain regular expression
-# pattern_exclude = staging-*
+##[ec2]
+##
+### to talk to a private eucalyptus instance uncomment these lines
+### and edit edit eucalyptus_host to be the host name of your cloud controller
+###eucalyptus = True
+###eucalyptus_host = clc.cloud.domain.org
+##
+### AWS regions to make calls to. Set this to 'all' to make request to all regio
+##ns
+### in AWS and merge the results together. Alternatively, set this to a comma
+### separated list of regions. E.g. 'us-east-1,us-west-1,us-west-2'
+##regions = all
+##regions_exclude = us-gov-west-1,cn-north-1
+##
+### When generating inventory, Ansible needs to know how to address a server.
+### Each EC2 instance has a lot of variables associated with it. Here is the lis
+##t:
+###   http://docs.pythonboto.org/en/latest/ref/ec2.html#module-boto.ec2.instance
+### Below are 2 variables that are used as the address of a server:
+###   - destination_variable
+###   - vpc_destination_variable
+##
+### This is the normal destination variable to use. If you are running Ansible
+### from outside EC2, then 'public_dns_name' makes the most sense. If you are
+### running Ansible from within EC2, then perhaps you want to use the internal
+### address, and should set this to 'private_dns_name'. The key of an EC2 tag
+##...skipping...
+### pattern_include = staging-*
+##
+### If you want to exclude any hosts that match a certain regular expression
+### pattern_exclude = staging-*
 
 # Instance filters can be used to control which instances are retrieved for
 # inventory. For the full list of possible filters, please read the EC2 API
