--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -1,27 +1,36 @@
 ---
-# aws_access_key_id: 
-# aws_secret_access_key: 
+# aws_access_key:
+# aws_secret_key:
 # apigee_repo_user: 
 # apigee_repo_password:
-# secure_security_group:
-# secure_vpc_subnet_id:
-# secure_name_prefix:
-# secure_key_name:
-# secure_aws_region: 
-# secure_owner_contact_info:
-# secure_company_env:
-# secure_department:
-# secure_bag:
-# secure_env_name:
+# security_group:
+# vpc_subnet_id:
+# name_prefix:
+# key_name:
+# aws_region: 
+# owner_contact_info:
+# company_env:
+# department:
+# bag:
+# team_contact_info:
+# env:
+# volume_type:
+# volume_size:
+# delete_on_termination:
+# device_name:
 
 # opdk_user_name:
 # opdk_user_email:
 # opdk_user_pass:
 # grafana_username:
+# grafana_password:
 # opdk_cass_username
 # opdk_cass_password:
 # opdk_smtp_user:
 # opdk_smtp_password:
+# opdk_ldap_pass:
+# pg_user:
+# pg_pass:
 
 # baas_admin_name:
 # baas_admin_email:
@@ -32,8 +41,4 @@
 # baas_smtp_user:
 # baas_smtp_user_pass:
 
-# opdk_ldap_pass:
-# secure_team_contact_info:
-# pg_user:
-# pg_pass:
 
