--- a/setup-base.yml
+++ b/setup-base.yml
@@ -5,7 +5,17 @@
     apigee_config: ~/.apigee
     workspace: ~/apigee-workspace/opdk-workspace
 
+#  vars_prompt:
+#    - name: license_path
+#      prompt: "Enter path to license file"
+#      private: no
+
   tasks:
+#  - name: Copy license file in .apigee folder
+#    copy:
+#      src: '{{ license_path }}'
+#      dest: '{{ apigee_config}}/license.txt'
+
   - name: Create ansible configuration folders
     file:
       path: '{{ item }}'
