--- a/resources/ec2.ini
+++ b/resources/ec2.ini
@@ -151,16 +151,14 @@ group_by_elasticache_replication_group = True
 ###eucalyptus = True
 ###eucalyptus_host = clc.cloud.domain.org
 ##
-### AWS regions to make calls to. Set this to 'all' to make request to all regio
-##ns
+### AWS regions to make calls to. Set this to 'all' to make request to all regions
 ### in AWS and merge the results together. Alternatively, set this to a comma
 ### separated list of regions. E.g. 'us-east-1,us-west-1,us-west-2'
 ##regions = all
 ##regions_exclude = us-gov-west-1,cn-north-1
 ##
 ### When generating inventory, Ansible needs to know how to address a server.
-### Each EC2 instance has a lot of variables associated with it. Here is the lis
-##t:
+### Each EC2 instance has a lot of variables associated with it. Here is the list:
 ###   http://docs.pythonboto.org/en/latest/ref/ec2.html#module-boto.ec2.instance
 ### Below are 2 variables that are used as the address of a server:
 ###   - destination_variable
