--- a/control-server.yml
+++ b/control-server.yml
@@ -1,7 +1,7 @@
 ---
 - include: configuration/update-user.yml
   vars:
-`    hosts: '{{ hosts }}'
+    hosts: '{{ hosts }}'
     user: 'root'
   tags:
   - root-user
