updated for baas configs

--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -33,12 +33,14 @@
 # pg_pass:
 
 # baas_admin_name:
+
+# baas_admin_email cannot be the same as  baas_superuser_email
 # baas_admin_email:
 # baas_admin_pass:
-# baas_superuser_name:
+
+# baas_superuser_email cannot be the same as baas_admin_email
 # baas_superuser_email:
+# baas_superuser_name:
 # baas_superuser_pass:
 # baas_smtp_user:
 # baas_smtp_user_pass:
-
-
