--- a/setup-base.yml
+++ b/setup-base.yml
@@ -14,6 +14,7 @@
     with_items:
     - '{{ ansible_config }}/configurations'
     - '{{ ansible_config }}/inventory'
+    - '{{ ansible_config }}/tmp/logs'
     - '{{ apigee_config }}'
 
   - name: Yum packages
