--- a/setup-base.yml
+++ b/setup-base.yml
@@ -5,6 +5,9 @@
     ansible_config: ~/.ansible
     apigee_config: ~/.apigee
     workspaces: ~/apigee-workspace/opdk-workspace
+    repos: 
+    - apigee-opdk-playbook-installation-single-region
+    - apigee-opdk-playbook-samples
 
   tasks:
   - name: Create ansible configuration folders
