--- a/setup-base.yml
+++ b/setup-base.yml
@@ -7,6 +7,7 @@
     workspace: ~/apigee-workspace/opdk-workspace
     repos: 
     - apigee-opdk-playbook-installation-single-region
+    - apigee-opdk-playbook-maintenance-aws-management
     - apigee-opdk-playbook-samples
 
   tasks:
