--- a/setup-base.yml
+++ b/setup-base.yml
@@ -8,11 +8,89 @@
     role_workspace: ~/apigee-workspace/apigee-opdk-role-workspace
     host_repo: git@github.com:carlosfrias
     repos: 
-    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-single-region }
-    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-aws-management }
-    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-expand-region }
     - { workspace: '{{ playbook_workspace }}', repo: local-workspace-maintenance }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-aio }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-baas }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-microgateway }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-mirror }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-monetization }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-single-region }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-third-region }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-two-region }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-aws-management }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-backup }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-cassandra-validation }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-expand-region }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-opdk-upgrade }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-postgresql-add-remove }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-qpid-add-remove }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-update-message-processor-properties }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-vagrant }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-validate-port-availability }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-samples }
+    - { workspace: '{{ role_workspace }}', repo: apigee-fetch-files }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-cassandra }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-ldap }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-mp }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-ms }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-postgres }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-qpid }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-router }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-ui }
+    - { workspace: '{{ role_workspace }}', repo: apigee-internal-port-connectivity-validator-zookeeper }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-create }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-security-group }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-setup }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-aws-terminate }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-baas-create-org-and-user }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-baas-silent-installation-config }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-backup }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-client-update }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-rebuild }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-cassandra-repair }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-enable-swap }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-restore }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-server-self }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-set-reachable }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-analytics-group-add }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-apigee-user }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-archive-installer }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-create-archive }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-download-archive }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-rollback }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-bootstrap-upload-archive }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-component }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-component-installer }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-default-settings }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-message-processor-bind-environment }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-openjdk }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-org }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-org-config }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-common }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-limits }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-minimum }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-os-postgres }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-config }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-master }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgres-standby }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgresql-add }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-postgresql-remove }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-provisioning }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-qpid-add }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-qpid-remove }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-selinux-disable }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-silent-installation-config }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-status }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-validate }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-setup-validate-cleanup }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-shutdown-iptables }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-start-components }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-stop-components }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-time-sync }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-update-component }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-validate-external-port-connectivity-client }
+    - { workspace: '{{ role_workspace }}', repo: apigee-opdk-validate-external-port-connectivity-server }
 
   tasks:
   - name: Create ansible configuration folders
