--- a/setup-base.yml
+++ b/setup-base.yml
@@ -8,7 +8,7 @@
     role_workspace: ~/apigee-workspace/apigee-opdk-role-workspace
     host_repo: git@github.com:carlosfrias
     repos: 
-    - { workspace: '{{ playbook_workspace }}', repo: local-workspace-maintenance }
+    - { workspace: '{{ playbook_dir }}/..', repo: local-workspace-maintenance }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-aio }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-baas }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-microgateway }
@@ -16,13 +16,13 @@
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-monetization }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-single-region }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-third-region }
-    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-two-region }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-installation-two-regions }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-aws-management }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-backup }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-cassandra-validation }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-expand-region }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-opdk-upgrade }
-    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-postgresql-add-remove }
+    - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-postgres-add-remove }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-qpid-add-remove }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-update-message-processor-properties }
     - { workspace: '{{ playbook_workspace }}', repo: apigee-opdk-playbook-maintenance-vagrant }
@@ -112,7 +112,16 @@
     with_items:
     - git
     - tree
-    when: ansible_os_family | lower == 'redhat'
+    when: ansible_pkg_mgr | lower == 'yum'
+
+  - name: Debian packages
+    apt:
+      name: '{{ item }}'
+      state: present
+    with_items:
+    - git
+    - tree
+    when: ansible_pkg_mgr | lower == 'apt'
 
   - name: Git checkout of sample configurations
     ignore_errors: yes
