--- a/setup-ec2.yml
+++ b/setup-ec2.yml
@@ -17,7 +17,7 @@
       backup: yes
       dest: ~/.bashrc
       state: present
-      line: 'export AWS_SECRET_ACCESS_KEY={{ aws_access_key }}'
+      line: 'export AWS_SECRET_ACCESS_KEY={{ aws_secret_key }}'
     when: aws_access_key is defined and update_env is defined and update_env
 
   - name: Update .bashrc with aws_secret_key
@@ -26,7 +26,7 @@
       backup: yes
       dest: ~/.bashrc
       state: present
-      line: 'export AWS_ACCESS_KEY_ID={{ aws_secret_key }}'
+      line: 'export AWS_ACCESS_KEY_ID={{ aws_access_key }}'
     when: aws_secret_key is defined and update_env is defined and update_env
 
   - name: Update .bashrc with aws_region
