--- a/resources/credentials.yml
+++ b/resources/credentials.yml
@@ -24,7 +24,7 @@
 # opdk_user_pass:
 # grafana_username:
 # grafana_password:
-# opdk_cass_username
+# opdk_cass_username:
 # opdk_cass_password:
 # opdk_smtp_user:
 # opdk_smtp_password:
